# LumbarTutor

Config/: PlusServer-Webcam.xml  PlusServer_Ascension3DG_Lumbar.xml  PlusServer_FakeTracker_NeedleToReference.xml  Telemed-40mm-L12_Ascension.xml  Telemed-50mm-L12_Ascension.xml  Telemed-60mm-L12_Ascension.xml  Telemed-60mm-L12_Ascension_Calibration.xml  Telemed-70mm-L12_Ascension.xml  Ultrasonix-L14-5_Ascension.xml
LumbarTutor/: CMakeLists.txt
LumbarTutor/LumbarTutor/: LumbarTutor.py
LumbarTutor/LumbarTutor/Resources/: ProbeModelToProbe_L12.h5  ProbeModelToProbe_L14-5.h5
LumbarTutor/LumbarTutor/Resources/SpineScenes/: LumbarTutor_D01.mrb  LumbarTutor_H02.mrb
LumbarTutor/LumbarTutor/Resources/StyleSheets/: LumbarTutorStyle - Backup.qss  LumbarTutorStyle.qss
LumbarTutor/LumbarTutor/Resources/UserGroups/: Guidance.txt  NoGuidance.txt
Metrics/: AverageNeedlePlaneAngle.py  AverageNeedlePlaneDistance.py  InAction.py  MaximumNeedlePlaneAngle.py  MaximumNeedlePlaneDistance.py  NeedlePlaneDistanceAngle.py
